# CarbonCopySignatureMatching

./: CMakeLists.txt  Net.cpp  Net.h  Neuron.cpp  Neuron.h  README.md  TrackPad.cpp  TrackPad.h  TrainingData.cpp  TrainingData.h  ccsm-test.cpp  ccsm-track  ccsm-track.cpp  ccsm-train  ccsm-train.cpp  ccsm-view.cpp  testNet.txt
signatures/: L.sgn.tsv  L_rotate180.sgn.tsv  N.sgn.tsv  ReadMe.txt  Z.sgn.tsv  alpha.sgn.tsv  beta.sgn.tsv  ch4perone.sgn.tsv  circle.sgn.tsv  delta.sgn.tsv  diagonal_leftright_down.sgn.tsv  diagonal_leftright_up.sgn.tsv  epsilon.sgn.tsv  flash.sgn.tsv  gamma.sgn.tsv  heart.sgn.tsv  josh.sgn.tsv  line_horizontal.sgn.tsv  line_vertical.sgn.tsv  omega.sgn.tsv  vertical_line_down.sgn.tsv  wedge_down.sgn.tsv  wedge_left.sgn.tsv  wedge_right.sgn.tsv  wedge_up.sgn.tsv
